@@ -1,5 +1,10 @@
 2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* libmisc/monitor/mon-monitor.c, libmisc/monitor/monitor.h: Add const
+	to fix warning. Spacing.
+
+2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* score/include/rtems/system.h: Fix warnings about TRUE/FALSE not
 	defined on ARM target. This file need to be clean from .S files.
 
